fixed alignment

--- a/Day 26/user-list/src/index.css
+++ b/Day 26/user-list/src/index.css
@@ -31,6 +31,11 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+ 
+}
+
+h2 {
+  text-align: center;
 }
 
 button {
